# ember__code

./: .gitignore  CLAUDE_CODE_PARITY.md  Makefile  QA_CHECKLIST.md  QUICKSTART.md  README.md  pyproject.toml
.github/: setup-repo-rules.sh
.github/homebrew/: ember-code.rb  update-formula.py
.github/workflows/: ci.yml  release.yml  test-updater-sig.yml
agents/: architect.md  conversational.md  debugger.md  docs.md  editor.md  explorer.md  git.md  planner.md  qa.md  reviewer.md  security.md  simplifier.md
clients/: .gitignore  README.md
clients/jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
clients/tauri/: README.md
clients/tauri/src-tauri/: Cargo.toml  tauri.conf.json
clients/tauri/src-tauri/capabilities/: default.json
clients/tauri/src-tauri/icons/: icon.icns
clients/tauri/src-tauri/src/: lib.rs  main.rs  runtime.rs
clients/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.test.json
clients/vscode/src/: extension.ts  runtime.ts  version.generated.ts
clients/vscode/test/: fake-backend.cmd  fake-backend.js  runTest.ts
clients/web/: FEATURE_STATUS.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
clients/web/e2e/: demo.spec.ts
clients/web/public/: loading.html
clients/web/src/: App.tsx  clientState.ts  main.tsx  theme.css
docs/: AGENTS.md  ARCHITECTURE.md  CODEINDEX.md  CODEINDEX_EVAL_REPORT__v13_n5.md  CODEINDEX_FOLDER_CONTEXT_PROPOSAL.md  COMPARISON.md  CONFIGURATION.md  DEVELOPMENT.md  HOOKS.md  MCP.md  MIGRATION.md  ONBOARDING.md  QUICKSTART.md  SECURITY.md  SKILLS.md  TESTING.md  TEST_COVERAGE.md  TOOLS.md
evals/: debugger.yaml  main_agent.yaml
migrations/: env.py
migrations/versions/: 9318ebdb0db5_initial_sqlite_schema.py
scripts/: build-clients.sh  debug_prompt_real.py  debug_prompt_size.py  dump_wire_schema.py  run_evals_smoke.py  sync-version.mjs
skills/commit/: SKILL.md
skills/explain/: SKILL.md
skills/migration/: SKILL.md
skills/pr/: SKILL.md
skills/review-pr/: SKILL.md
skills/simplify/: SKILL.md
skills/update-docs/: SKILL.md
src/ember_code/: __init__.py  __main__.py  alembic.ini  cli.py  init.py  learn.py  orchestrator.py  pool.py  prefetch_models.py  queue_hook.py  schemas.py  team_builder.py  workspace.py
src/ember_code/auth/: client.py  credentials.py
src/ember_code/backend/: __init__.py  __main__.py  command_handler.py  server.py  session_pool.py
src/ember_code/bundled_agents/: architect.md  debugger.md  diagnostician.md  editor.md  explorer.md  qa.md  reviewer.md  security.md
src/ember_code/config/: __init__.py  api_keys.py  defaults.py  models.py  permissions.py  settings.py  tool_permissions.py
src/ember_code/core/: init.py  learn.py  pool.py  queue_hook.py  worktree.py
src/ember_code/evals/: __init__.py  assertions.py  reporter.py  runner.py
src/ember_code/guardrails/: __init__.py  injection.py  moderation.py  pii.py  runner.py
src/ember_code/hooks/: __init__.py  events.py  executor.py  loader.py  schemas.py  tool_hook.py
src/ember_code/knowledge/: __init__.py  embedder.py  embedder_registry.py  manager.py  sync.py  vector_store.py
src/ember_code/mcp/: __init__.py  approval.py  (+5 more)
tests/: conftest.py  test_agno_events.py  test_api_keys.py  test_audit.py  test_audit_logger.py  test_auth.py  test_auth_client.py  test_backend_serialize.py  test_backend_server.py  test_cli.py  test_cli_flags.py  test_code_index.py  test_code_index_delta.py  test_code_index_pg.py  test_codeindex.py  test_codeindex_eval_fixture.py  test_codeindex_status.py  test_codeindex_sync_manager.py  test_codeindex_tools.py  test_commands.py  test_context.py  test_context_helpers.py  test_crash_survival.py  test_custom_tools.py  test_delta_roundtrip.py  test_display.py  test_empty_guard.py  test_ephemeral_agents.py  test_error_recovery.py  test_evals.py  test_extract_result_summary.py  test_file_index.py  test_format_edit_diff.py  test_guardrails.py  test_hitl_batch_resolve.py  test_hitl_handler.py  test_hook_async_rewake.py  test_hook_envelope_parser.py  test_hook_events_new.py  test_hook_permission_decision.py  (+73 more)
(+260 files in other folders)
