[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ember-code"
version = "0.1.0"
description = "Terminal-based AI coding assistant built on Agno"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "agno[openai,ddg,sqlite,mcp]~=2.5",
    "aiosqlite~=0.22",
    "greenlet~=3.3",
    "rich~=14.3",
    "textual~=8.1",
    "pyyaml~=6.0",
    "click~=8.3",
    "pydantic~=2.12",
    "httpx~=0.28",
    "google-genai~=1.67",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "ruff~=0.15",
    "mypy~=1.19",
]
mcp = [
    "mcp~=1.26",
]
knowledge = [
    "chromadb~=1.5",
]
gemini = [
    "google-genai~=1.67",
]
web = [
    "duckduckgo-search~=8.1",
]

[project.scripts]
ignite-ember = "ember_code.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ember_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["union-attr", "annotation-unchecked", "arg-type", "return-value", "attr-defined", "import-untyped", "call-arg", "override"]
