[package]
name = "ember-code-app"
version = "0.1.0"
description = "Ember Code — standalone desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[lib]
name = "ember_code_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
